# jfmp

./: .gitignore  .gitmodules  .pylintrc  Pipfile  README.md  main.py  setup.cfg  setup.py
.github/workflows/: build.yml  publish.yml  pythonpublish.yml
jfmp/: app.py  client.py  conffile.py  constants.py  data.py  file.py  gui.py  interfaces.py  player.py
