[metadata]
name = jfmp
author = Nicolas Peugnet
author-email = n.peugnet@free.fr
summary = A minimalist cross-platform gapless music player for Jellyfin
description-file = README.md
long-description-content-type = text/markdown
home-page = https://github.com/n-peugnet/jfmp
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
setup_requires=
    pbr>=1.9
install_requires =
    jellyfin-apiclient-python>=1.3,<2
    musicplayer @ git+https://github.com/n-peugnet/music-player-core.git@test-branch
    appdirs>=1,<2
    pyside2>=5,<6
python_requires = >=3.6
packages =
    jfmp

[entry_points]
gui_scripts =
    jfmp = jfmp.app:main

[bdist_wheel]
universal = true

[flake8]
ignore = F403,F405
max-line-length = 80
exclude = build/*,dist/*,setup.py,main.py
max-complexity = 10

# flake8-copyright
copyright-check = True
# add C errors to the default selection
select = E,F,W,C